overlays/test/patch-frontapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontapp
spec:
  template:
    spec:
      containers:
      - name: frontapp
        env:
        - name: APP_DEFAULT_MESSAGE
          value: "frontapp-test"
